# markdown-gen

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/rules/: spectrai-fileops.md  spectrai-session.md
src/: index.html  styles.css  test-preview.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  config.rs  file.rs  main.rs  watcher.rs
src/js/: ai.js  app-simple.js  app.js  editor-simple.js  editor.js  file-explorer.js  i18n.js  main.js
src/ts/: main.ts
src/ts/core/: index.ts  tauri-bridge.ts
src/ts/modules/app/: App.ts
src/ts/modules/editor/: Editor.ts
src/ts/modules/file-explorer/: FileExplorer.ts
src/ts/types/: config.ts  tauri.ts
